--- a/PeopleApp/PeopleApp.csproj
+++ b/PeopleApp/PeopleApp.csproj
@@ -27,4 +27,10 @@
     <Folder Include="Models\" />
     <Folder Include="Views\People\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\images\banner1.svg" />
+    <Content Remove="wwwroot\images\banner2.svg" />
+    <Content Remove="wwwroot\images\banner3.svg" />
+    <Content Remove="wwwroot\images\banner4.svg" />
+  </ItemGroup>
 </Project>
